# xlsx-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
examples/: cells-write.json  codex-config.toml  columns-modify.json  formula-set.json  open.json  opencode.json  range-read.json  rows-append.json  rows-modify.json  sheet-delete.json  sheet-list.json  sheet-rename.json  table-write.json
src/xlsx_agent/: __init__.py  cli.py  mcp_server.py
src/xlsx_agent/core/: __init__.py  cell.py  columns.py  comments.py  data.py  diff.py  errors.py  export.py  formula.py  formula_ops.py  freeze_panes.py  headers_footers.py  images.py  inspect.py  merges.py  names.py  page_setup.py  print_area.py  range.py  read.py  rows.py  sheet_ops.py  sheets.py  store.py  style.py  tables.py  validation.py  validation_ops.py  workbook.py  workbook_ops.py  write.py
src/xlsx_agent/schemas/: __init__.py  advanced.py  common.py  essentials.py
tests/: conftest.py  test_cli_smoke.py  test_comment_operations.py  test_image_operations.py  test_imports.py  test_layout_operations.py  test_mcp_operations.py  test_mcp_smoke.py  test_read_write_operations.py  test_regressions.py  test_sheet_operations.py  test_v02_operations.py  test_workbook_lifecycle.py
tests/fixtures/: base-workbook.xlsx
