[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "xlsx-mcp"
version = "1.0.0"
description = "Deterministic local Excel automation for coding agents and humans."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "xlsx-agent contributors" }
]
keywords = ["excel", "xlsx", "mcp", "cli", "automation", "openpyxl"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "mcp>=1.27,<2",
  "openpyxl>=3.1,<4",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1"
]

[project.urls]
Repository = "https://github.com/dwilberger/xlsx-mcp"
Issues = "https://github.com/dwilberger/xlsx-mcp/issues"
Changelog = "https://github.com/dwilberger/xlsx-mcp/blob/main/CHANGELOG.md"
Security = "https://github.com/dwilberger/xlsx-mcp/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
xlsx-mcp = "xlsx_agent.cli:main"
xlsx-mcp-server = "xlsx_agent.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/xlsx_agent"]
